# cas-geoparsing

./: .dockerignore  .gitignore  Dockerfile  MappingTextsDemo.ipynb  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml
notebooks/: GeoparsingDemo.ipynb  MappingTextsDemo.ipynb
